Finished side menu styling and implementation

--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -5,3 +5,9 @@ $white: #F8FAFB;
 
 $border-radius: 10px;
 $box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.2);
+
+$screen-sm: 576px;
+$screen-md: 768px;
+$screen-lg: 992px;
+$screen-xl: 1200px;
+$screen-xxl: 1400px;
