--- a/frontend/src/assets/_global.scss
+++ b/frontend/src/assets/_global.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 
 body {
     margin: 0px;
@@ -11,12 +11,8 @@ h1, h2, h3, h4, h5, h6, p {
     margin: 0px;
 }
 
-h1, h2 {
-    font-weight: bold;
-}
-
-h3, h4, h5, h6 {
-    font-weight: 500;
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 400;
 }
 
 p, span, a {
