--- a/frontend/src/assets/_global.scss
+++ b/frontend/src/assets/_global.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap');
 
 body {
     margin: 0px;
     font-family: 'Open Sans', sans-serif;
-    color: $dark-purple;
-    background-color: $white;
+    color: $text-color;
+    background-color: $light-black;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -12,11 +12,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 400;
-}
-
-p, span, a {
-    font-weight: 300;
+    font-weight: 500;
 }
 
 h1 {
@@ -45,13 +41,14 @@ h6 {
 
 p, span, a {
     font-size: 14px;
+    font-weight: 400;
 }
 
 a {
-    color: $dark-purple;
+    color: $text-color;
     text-decoration: none;
     &:hover {
-        font-weight: 400;
+        font-weight: 500;
     }
 }
 
@@ -61,14 +58,14 @@ a {
 }
 
 ::-webkit-scrollbar-track {
-    background: $light-purple;
+    background: $highlight-color;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: $dark-purple;
+    background: $text-color;
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: $dark-purple;
+    background: $text-color;
 }
