--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -1,10 +1,10 @@
-$purple: #6F6AF8;
-$light-purple: #F1F1FC;
-$dark-purple: #160F47;
-$white: #F8FAFB;
+$nice-black: #272b34;
+$light-black: #373a44;
+$text-color: #FFFFFF;
+$highlight-color: #ff4b4c;
 
 $border-radius: 10px;
-$box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.2);
+$box-shadow: 1px 2px 5px 2px rgba(255, 255, 255, 0.1);
 
 $screen-sm: 576px;
 $screen-md: 768px;
