--- a/frontend/src/assets/_global.scss
+++ b/frontend/src/assets/_global.scss
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap');
 
 body {
     margin: 0px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
     color: $text-color;
     background-color: $light-black;
+    letter-spacing: 1px;
 }
 
 h1, h2, h3, h4, h5, h6, p {
