--- a/frontend/src/assets/_global.scss
+++ b/frontend/src/assets/_global.scss
@@ -14,6 +14,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
+    color: $heading-color;
 }
 
 h1 {
@@ -54,7 +55,7 @@ a {
 }
 
 input {
-    background-color: $text-color;
+    background-color: $heading-color;
     color: $background-color;
     &:focus {
         outline-color: $main-highlight-color;
