--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -4,6 +4,7 @@ $main-highlight-color: #18bdb1;
 $darken-main-highlight-color: #1a5a5f;
 $secondary-highlight-color: #fdb755;
 $darken-secondary-highlight-color: #f2936b;
+$heading-color: #ebebeb;
 $text-color: #abaeb5;
 $darken-text-color: #22303b;
 
